Mon Jul 28 15:38:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Added the code for the Protocol Options tab.

Mon Jul 28 11:46:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - qpe-gaim actually compiles again.
	  - Moved some complex stuff into their own functions.

Mon Jul 28 03:15:08 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	  - Added a bit more to the account editor dialog.

Mon Jul 28 01:46:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimProtocolBox.cpp:
	* src/QGaimProtocolBox.h:
	* gaim.pro:
	  - Added a new widget that extends QComboBox and provides a list
	    of available protocols.

Mon Jul 28 00:52:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	* gaim.pro:
	  - Moved a utility function that worked its way into 3 different
	    classes due to laziness into a new utility class.

Mon Jul 28 00:13:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* gaim.pro:
	  - Added the very beginnings of the Add/Edit account dialog.

Sun Jul 27 23:14:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvButton.h:
	* src/QGaimConvWindow.cpp:
	* src/main.cpp:
	  - Clicking the conversations button (as opposed to holding it down)
	    now raises the last active conversation window.

Sun Jul 27 17:13:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
